--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <head><meta name="viewport" content="width=device-width, initial-scale=1"></head>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="An implementation of the mastermind game and code kata in elm">
+    </head>
     <body>
         <div id="root"></div>
         <script type="module" src="index.js"></script>
