--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,11 @@
     </head>
     <body>
         <div id="root"></div>
-        <script type="module" src="index.js"></script>
+        <script type="module">
+            import {Elm} from "./Main.elm";
+            Elm
+                .Main
+                .init({node: document.getElementById("root")});
+        </script>
     </body>
 </html>
